www/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: www
spec:
  type: ClusterIP
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 8080
      name: httpd-svc-port
      targetPort: httpd-port
