www/www-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  namespace: www
  annotations:
    kubernetes.io/ingress.class: "nginx"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: "kubernetes.docker.internal"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-service
                port:
                  name: nginx-svc-port
          - pathType: Prefix
            path: "/httpd"
            backend:
              service:
                name: httpd-service
                port:
                  name: httpd-svc-port
